# sharebib

./: README.md
.claude-plugin/: marketplace.json  plugin.json
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/i18n/: en.json  zh.json
frontend/src/pages/: Settings.tsx
sdk/: README.md  pyproject.toml
sdk/sharebib/: __init__.py  client.py
skills/sharebib/: SKILL.md
