[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharebib"
version = "0.4.0"
description = "Python SDK and CLI for ShareBib"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "VisualDust", email = "gavin@gong.host"}
]
maintainers = [
    {name = "VisualDust", email = "gavin@gong.host"}
]
keywords = ["sharebib", "bibtex", "research", "papers", "cli", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/visualdust/sharebib"
Documentation = "https://github.com/visualdust/sharebib/tree/main/sdk"
Repository = "https://github.com/visualdust/sharebib"
Issues = "https://github.com/visualdust/sharebib/issues"

[project.scripts]
sharebib = "sharebib.cli:main"
sharebib-cli = "sharebib.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sharebib*"]
